[package]
name = "spaced-list-5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
paste = "1.0.7"
maybe-owned = "0.3.4"
itertools = "0.12.0"
slab = "0.4.6"
nohash-hasher = "0.2.0"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
ansi_term = "0.12.1"
indoc = "1.0"

[[bench]]
name = "inflate"
harness = false

[profile.bench]
debug = true